--- a/part1.Rmd
+++ b/part1.Rmd
@@ -9,7 +9,7 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE, fig.width = 7, fig.height = 3, 
                       message = FALSE, warning = FALSE)
 ```
-# Statistical Inference Course Project pt 1
+# Statistical Inference Course Project pt. 1
 ## Overview
 
 In this project I am going to investigate the exponential distribution in R an compare it with the CLT (Central Limit Theorem). Lambda will be set to 0.2 for all of the simulations. I will investigate the distribution of averages of 40 exponentials, doing a thousand simulations. 
